# ComicCanvasCreator

./: main.py  pyproject.toml
static/css/: styles.css
static/js/: app.js  canvas.js  dragdrop.js  imageupload.js  textbubble.js  toolbar.js
static/js/services/: DragDropService.js  ImageService.js  PanelService.js  TextBubbleService.js
templates/: index.html
